@@ -42,10 +42,14 @@ What's New in astroid 4.0.3?
 ============================
 Release date: TBA
 
+* Fix inference of ``IfExp`` (ternary expression) nodes to avoid prematurely narrowing
+  results in the face of inference ambiguity.
+
+  Closes #2899
+
 * Fix base class inference for dataclasses using the PEP 695 typing syntax.
 
   Refs pylint-dev/pylint#10788
-
 
 
 What's New in astroid 4.0.2?
